# msckf-rust

./: .gitignore  Cargo.toml  LICENSE  notes.md  outline.md  readme.md
scripts/: download_euroc.py  test_triangulation.py
src/: camera.rs  config.rs  dataset.rs  detector.rs  feature.rs  frame.rs  image.rs  kalman_filter.rs  lib.rs  main.rs  math.rs  my_types.rs  optical_flow.rs  pinhole.rs  pyramid.rs  stationary.rs  tracker.rs  video.rs  vio.rs  visualization.rs
