[package]
name = "msckf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
opencv = { version = "0.85.3", features = ["clang-runtime"] }
nalgebra = "0.30"
ndarray = "0.15"
rerun = "0.11.0"
clap = { version = "3", features = ["derive"] }
ffmpeg = "0.3.0"

tracing-indicatif = "0.3.6"
indicatif = { version = "0.17.6", features = ["in_memory"] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.17" }

# Deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging facade.
log = "0.4"
