[package]
name = "msckf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# if use latest opencv, then cannot build 
opencv = "0.80.0"

# NOTE, nalgebra-lapack = "0.24.0" requires nalgebra 0.32
# if use a lower version, the error will say using two versions of nalgebra 
nalgebra = "0.32.5"
nalgebra-lapack = "0.24.0"
num-traits = "0.2.18"

ndarray = "0.15"
rerun = "0.14.1"
clap = { version = "3", features = ["derive"] }

tracing-indicatif = "0.3.6"
indicatif = { version = "0.17.6", features = ["in_memory"] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.17" }

# Random number generation.
rand = "0.8"
# The core `rand` library does not provide any seedable RNGs?
rand_xoshiro = "0.6"

# Deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging facade.
log = "0.4"

